[gd_scene load_steps=14 format=3 uid="uid://cjca6mx3264lj"]

[ext_resource type="PackedScene" uid="uid://bjrdo414yrqyh" path="res://assets/models/chessinggame.glb" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://dgkrnefdt5vfk" path="res://scripts/player.gd" id="1_tuyoq"]
[ext_resource type="Script" uid="uid://dxg0yepbv63k0" path="res://addons/godot_state_charts/state_chart.gd" id="3_fjrip"]
[ext_resource type="Script" uid="uid://cwxxkh1jh6pp4" path="res://addons/godot_state_charts/compound_state.gd" id="4_smehm"]
[ext_resource type="Script" uid="uid://bitddddrhbl0d" path="res://addons/godot_state_charts/atomic_state.gd" id="5_ur7pv"]
[ext_resource type="Script" uid="uid://knk6whqnftyj" path="res://addons/godot_state_charts/transition.gd" id="6_y4r1p"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_g2els"]
height = 2.38132

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tuyoq"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_smehm"]
animation = &"jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ur7pv"]
animation = &"fall"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fjrip"]
animation = &"idle"

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_smehm"]
xfade_time = 0.2
input_0/name = "idle"
input_0/auto_advance = false
input_0/break_loop_at_end = false
input_0/reset = true
input_1/name = "run"
input_1/auto_advance = false
input_1/break_loop_at_end = false
input_1/reset = true
input_2/name = "jump"
input_2/auto_advance = false
input_2/break_loop_at_end = false
input_2/reset = true
input_3/name = "fall"
input_3/auto_advance = false
input_3/break_loop_at_end = false
input_3/reset = true

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_tuyoq"]
graph_offset = Vector2(-385.372, 113.87)
nodes/Animation/node = SubResource("AnimationNodeAnimation_fjrip")
nodes/Animation/position = Vector2(60, 20)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_tuyoq")
"nodes/Animation 2/position" = Vector2(60, 200)
"nodes/Animation 3/node" = SubResource("AnimationNodeAnimation_smehm")
"nodes/Animation 3/position" = Vector2(120, 340)
"nodes/Animation 4/node" = SubResource("AnimationNodeAnimation_ur7pv")
"nodes/Animation 4/position" = Vector2(40, 520)
nodes/Transition/node = SubResource("AnimationNodeTransition_smehm")
nodes/Transition/position = Vector2(500, 60)
nodes/output/position = Vector2(760, 120)
node_connections = [&"Transition", 0, &"Animation", &"Transition", 1, &"Animation 2", &"Transition", 2, &"Animation 3", &"Transition", 3, &"Animation 4", &"output", 0, &"Transition"]

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_tuyoq")
clamp_pitch_rotation = 70.0

[node name="Yaw" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="Pitch" type="SpringArm3D" parent="Yaw"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.23415, 0)
spring_length = 10.0

[node name="Camera3D" type="Camera3D" parent="Yaw/Pitch"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.53279, 4.40783)

[node name="chessinggame" parent="." instance=ExtResource("1_3vyb7")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="chessinggame/Armature_001" index="0"]
bones/7/position = Vector3(0, 0, 1.0704)
bones/7/rotation = Quaternion(3.09086e-08, 0.707107, 0.707107, 3.09086e-08)
bones/13/rotation = Quaternion(0.0220125, 0.434717, -0.06845, 0.897692)
bones/14/rotation = Quaternion(0.411066, 1.72524e-08, 1.52854e-07, 0.911606)
bones/17/rotation = Quaternion(0.0320414, -0.463594, 0.107068, 0.878971)
bones/18/rotation = Quaternion(0.331471, 1.58489e-08, -1.02186e-07, 0.943466)
bones/20/rotation = Quaternion(-5.11241e-08, 0.106881, 0.994272, 2.7546e-07)
bones/21/rotation = Quaternion(-0.19887, -6.58794e-09, 4.44353e-07, 0.980026)
bones/22/rotation = Quaternion(0.535358, -3.37356e-07, -2.24647e-07, 0.844625)
bones/24/rotation = Quaternion(6.69381e-08, 0.106881, 0.994272, -2.77159e-07)
bones/25/rotation = Quaternion(-0.19887, 6.58793e-09, -4.44353e-07, 0.980026)
bones/26/rotation = Quaternion(0.535358, 3.52135e-07, 2.18767e-07, 0.844625)
bones/27/rotation = Quaternion(0.308471, 4.15797e-08, 1.33607e-07, 0.951234)
bones/28/position = Vector3(0.961641, -0.184145, 0.267276)
bones/30/position = Vector3(-0.976214, -0.246263, 0.171608)
bones/31/position = Vector3(-0.957383, 0.731472, -0.309752)

[node name="AnimationPlayer" parent="chessinggame" index="1"]
root_motion_track = NodePath("Armature_001/Skeleton3D:root")
root_motion_local = false
callback_mode_process = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.21644, 0)
shape = SubResource("CapsuleShape3D_g2els")

[node name="RootMotionView" type="RootMotionView" parent="."]
animation_path = NodePath("../chessinggame/AnimationPlayer")
radius = 9.95

[node name="StateChart" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_fjrip")
metadata/_custom_type_script = "uid://dxg0yepbv63k0"

[node name="CompoundState" type="Node" parent="StateChart"]
script = ExtResource("4_smehm")
initial_state = NodePath("Onground")
metadata/_custom_type_script = "uid://cwxxkh1jh6pp4"

[node name="Onground" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("4_smehm")
initial_state = NodePath("Idle")

[node name="ToFalling" type="Node" parent="StateChart/CompoundState/Onground"]
script = ExtResource("6_y4r1p")
to = NodePath("../../Falling")
event = &"falling"
delay_in_seconds = "0.0"

[node name="Idle" type="Node" parent="StateChart/CompoundState/Onground"]
script = ExtResource("5_ur7pv")

[node name="ToRun" type="Node" parent="StateChart/CompoundState/Onground/Idle"]
script = ExtResource("6_y4r1p")
to = NodePath("../../Run")
event = &"running"
delay_in_seconds = "0.0"

[node name="Run" type="Node" parent="StateChart/CompoundState/Onground"]
script = ExtResource("5_ur7pv")

[node name="ToIdle" type="Node" parent="StateChart/CompoundState/Onground/Run"]
script = ExtResource("6_y4r1p")
to = NodePath("../../Idle")
event = &"no_input"
delay_in_seconds = "0.0"

[node name="ToJumping" type="Node" parent="StateChart/CompoundState/Onground/Run"]
script = ExtResource("6_y4r1p")
to = NodePath("../../Jumping")
event = &"jump"
delay_in_seconds = "0.0"

[node name="Jumping" type="Node" parent="StateChart/CompoundState/Onground"]
script = ExtResource("5_ur7pv")

[node name="ToRun" type="Node" parent="StateChart/CompoundState/Onground/Jumping"]
script = ExtResource("6_y4r1p")
to = NodePath("../../Run")
event = &"landed"
delay_in_seconds = "0.7"

[node name="Falling" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("5_ur7pv")

[node name="Transition" type="Node" parent="StateChart/CompoundState/Falling"]
script = ExtResource("6_y4r1p")
to = NodePath("../../Onground")
event = &"landed"
delay_in_seconds = "0.0"

[node name="AnimationTree" type="AnimationTree" parent="."]
unique_name_in_owner = true
root_node = NodePath("%AnimationTree/../chessinggame")
root_motion_track = NodePath("Armature_001/Skeleton3D:root")
root_motion_local = false
callback_mode_process = 0
tree_root = SubResource("AnimationNodeBlendTree_tuyoq")
anim_player = NodePath("../chessinggame/AnimationPlayer")
parameters/Transition/current_state = "idle"
parameters/Transition/transition_request = ""
parameters/Transition/current_index = 0.366665

[connection signal="state_entered" from="StateChart/CompoundState/Onground/Idle" to="." method="_on_idle_state_entered"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Onground/Idle" to="." method="_on_idle_state_physics_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/Onground/Run" to="." method="_on_run_state_entered"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Onground/Run" to="." method="_on_run_state_physics_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/Onground/Jumping" to="." method="_on_jumping_state_entered"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Onground/Jumping" to="." method="_on_jumping_state_physics_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/Falling" to="." method="_on_falling_state_entered"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Falling" to="." method="_on_falling_state_physics_processing"]

[editable path="chessinggame"]
